--- a/index.html
+++ b/index.html
@@ -4,16 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flower shope website</title>
+    <link rel="stylesheet" href="./index.css">
 </head>
 <body>
     <header>
-
+           <div class="container">
+            <div>
+                <h2 class="title">Let's make<br> beautiful flowers a <br>part of your life.</h2>
+                <p class="description">It is a long established fact that a reader will be distracted by the readable content of a page<br> when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters.</p>
+                <br>
+                <button class="repo">Shop Now</button>
+            </div>
+            <img class="condition" src="./Flower Asset/pngwing 6.png" alt="">
+           </div>
     </header>
     <main>
 
     </main>
     <footer>
-        
+
     </footer>
 </body>
 </html>
