--- a/index.html
+++ b/index.html
@@ -19,7 +19,16 @@
            </div>
     </header>
     <main>
-
+          <section>
+             <div class="reposit">
+                <div>
+                    <h2 class="danger">
+                        Our Featured Flowers
+                    </h2>
+                    <p class="title-repo">It is a long established fact that a reader will be distracted by the readable<br> content of a page when looking at its layout.</p>
+                </div>
+             </div>
+          </section>
     </main>
     <footer>
 
