index.image added

--- a/index.html
+++ b/index.html
@@ -28,6 +28,30 @@
                     <p class="title-repo">It is a long established fact that a reader will be distracted by the readable<br> content of a page when looking at its layout.</p>
                 </div>
              </div>
+             <section>
+                <div class="radio">
+                    <div>
+                        <img class="repoter" src="./Flower Asset/pngwing 6.png" alt="">
+                        <p class="ginipic"><u>Pink Flower Tree</u></p>
+                    </div>
+                    <div>
+                        <img class="phone" src="./Flower Asset/pngwing 5.png" alt="">
+                        <p class="config"><u>Pink Flower Tree</u></p>
+                    </div>
+                    <div>
+                        <img class="website" src="./Flower Asset/pngwing 7.png" alt="">
+                        <p class="regular"><u>Pink Flower Tree</u></p>
+                    </div>
+                </div>
+             </section>
+          </section>
+          <section>
+            <div class="origin">
+                 <div>
+                    <img class="construct" src=""
+                 </div>
+
+            </div>
           </section>
     </main>
     <footer>
