--- a/index.html
+++ b/index.html
@@ -48,7 +48,16 @@
           <section>
             <div class="origin">
                  <div>
-                    <img class="construct" src=""
+                    <img class="construct" src="./Flower Asset/Group 57.png" alt="">
+                    <p class="true">Same Day Delivery.<br> Click & Collect.</p>
+                 </div>
+                 <div>
+                    <img class="ant" src="./Flower Asset/Group 58.png" alt="">
+                    <p class="rose">Fresh Flowers. Local Growers.</p>
+                 </div>
+                 <div>
+                    <img class="language" src="/Flower Asset/Group 59.png" alt="">
+                    <p class="book">24/7 Free Support.</p>
                  </div>
 
             </div>
