--- a/index.html
+++ b/index.html
@@ -62,6 +62,16 @@
 
             </div>
           </section>
+          <section>
+            <div class="lorem">
+                <div>
+                    <h2 class="exam">Hot Deal ! Sale Up To 25% Off</h2>
+                    <p class="point">It is a long established fact that a reader will be distracted by the readable<br> content of a page when looking at its layout.</p>
+                    <button class="enime">Sign Up</button>
+                </div>
+                <img class="ragula" src="./Flower Asset/pngwing 8.png" alt="">
+            </div>
+          </section>
     </main>
     <footer>
 
