index.image content

--- a/index.html
+++ b/index.html
@@ -72,6 +72,38 @@
                 <img class="ragula" src="./Flower Asset/pngwing 8.png" alt="">
             </div>
           </section>
+          <section>
+            <div class="question">
+                <div>
+                    <h3 class="rain">Instagram</h3>
+                    <p class="facebook">It is a long established fact that a reader will be distracted by the readable<br> content of a page when looking at its layout.</p>
+                </div>
+            </div>
+          </section>
+          <section>
+            <div class="amount">
+                <div>
+                        <img class="gm" src="./Flower Asset/Flower 01.png" alt=""></div>
+                        <div>
+                        <img class="bm" src="./Flower Asset/Rectangle 4.png" alt=""></div>
+                        <div>
+                        <img class="lm" src="./Flower Asset/Rectangle 5.png" alt=""></div>
+                        <img class="dl" src="./Flower Asset/Rectangle 6.png" alt="">
+                </div>
+            </div>
+          </section>
+          <section>
+            <div class="leo">
+                <div>
+                    <h2  class="math">Get The Latest Deals</h2>
+                    <p class="empty">$30 coupon for first shopping</p>
+                    <div>
+                        <input class="record" type="text" placeholder="Enter your email here....">
+                            <button class="laptop">Subscribe</button>
+                        </div>
+                </div>
+            </div>
+          </section>
     </main>
     <footer>
 
