--- a/index.html
+++ b/index.html
@@ -106,7 +106,14 @@
           </section>
     </main>
     <footer>
-
+        <div class="navi">
+            <div>
+                <h2 class="position">Flower<span class="flower" shope>Shope</span></h2>
+                <p class="regulation">It is a long established fact that a reader will be distracted by the readable<br> content of a page when looking at its layout.</p>
+                <br>
+                <p class="range"><small> &copy; @2020-2023, FlowerShop.com. All rights reserved. </small></p>
+            </div>
+        </div>
     </footer>
 </body>
 </html>
