--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     <p class="rose">Fresh Flowers. Local Growers.</p>
                  </div>
                  <div>
-                    <img class="language" src="/Flower Asset/Group 59.png" alt="">
+                    <img class="language" src="./Flower Asset/Group 59.png" alt="">
                     <p class="book">24/7 Free Support.</p>
                  </div>
 
