--- a/index.html
+++ b/index.html
@@ -8,6 +8,17 @@
 </head>
 <body>
     <header>
+        <section>
+            <div class="gonder">
+                    <h3 class="habit">Flower<span class="focus">Shope</span></h3>
+                    <ul>
+                        <li class="e">Home</li>
+                        <li class="f">About</li>
+                        <li class="g">Contact us</li>
+                    <li><button class="concept">Login</button></li>
+                      </ul>
+            </div>
+        </section>
            <div class="container">
             <div>
                 <h2 class="title">Let's make<br> beautiful flowers a <br>part of your life.</h2>
